I fixed my mess with my coordinates.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SimpleGameTemplateGameLogic_SOURCES
     TileSet.cpp
     EntityBehavior.cpp
     Renderer.cpp
+    Collisions.cpp
 )
 
 set(SimpleGameTemplate_SOURCES
